netlink15_derive/tests/ui/deserializable/nla-type-duplicate-fails.stderr
error[E0081]: discriminant value `0` already exists
  --> tests/ui/deserializable/nla-type-duplicate-fails.rs:13:16
   |
11 |     #[nla_type(0)]
   |                - first use of `0`
12 |     Unspec,
13 |     #[nla_type(crate::ZERO)]
   |                ^^^^^^^^^^^ enum already has `0`
